Changed style of routers to REST style - wip(docs): swagger not generating actually - docs(swagger): annotations and routers now match - fix(routes): all routers been registered in init.go
