# docs/swagger.yaml
@@ -465,6 +465,21 @@ definitions:
         example: true
         type: boolean
     type: object
+  models.UpdateReceptionHospitalRequest:
+    properties:
+      diagnosis:
+        example: Грипп
+        type: string
+      id:
+        type: integer
+      recommendations:
+        example: Постельный режим
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/entities.ReceptionStatus'
+        example: scheduled
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -474,7 +489,7 @@ info:
   title: ClinicHub API
   version: 1.0.0
 paths:
-  /auth/login:
+  /auth:
     post:
       consumes:
       - application/json
@@ -510,7 +525,39 @@ paths:
       summary: Вход в систему
       tags:
       - Auth
-  /doctor:
+  /doctors/{doc_id}:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает данные врача по ID
+      parameters:
+      - description: ID врача
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Данные врача
+          schema:
+            $ref: '#/definitions/entities.Doctor'
+        "400":
+          description: Некорректный ID
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+        "404":
+          description: Врач не найден
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+        "500":
+          description: Внутренняя ошибка
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+      summary: Получить врача по ID
+      tags:
+      - Doctor
     put:
       consumes:
       - application/json
@@ -548,40 +595,7 @@ paths:
       summary: Обновить данные врача
       tags:
       - Doctor
-  /doctor/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Возвращает данные врача по ID
-      parameters:
-      - description: ID врача
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Данные врача
-          schema:
-            $ref: '#/definitions/entities.Doctor'
-        "400":
-          description: Некорректный ID
-          schema:
-            $ref: '#/definitions/handlers.ResultError'
-        "404":
-          description: Врач не найден
-          schema:
-            $ref: '#/definitions/handlers.ResultError'
-        "500":
-          description: Внутренняя ошибка
-          schema:
-            $ref: '#/definitions/handlers.ResultError'
-      summary: Получить врача по ID
-      tags:
-      - Doctor
-  /emergency/{doctor_id}/receptions:
+  /emergency/{doctor_id}:
     get:
       consumes:
       - application/json
@@ -623,6 +637,113 @@ paths:
       summary: Получить экстренные приёмы врача по дате
       tags:
       - EmergencyCall
+  /hospital/{doc_id}:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает информацию о приёме
+      parameters:
+      - description: ID приёма
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Информация о приёме
+          schema:
+            $ref: '#/definitions/entities.ReceptionHospital'
+        "400":
+          description: Некорректный ID
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+        "404":
+          description: Приём не найден
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+        "500":
+          description: Внутренняя ошибка
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+      summary: Получить приём по доктору
+      tags:
+      - Reception
+  /hospital/{recep_id}:
+    put:
+      consumes:
+      - application/json
+      description: Обновляет информацию о приёе в больнице
+      parameters:
+      - description: ID приёма
+        in: path
+        name: recep_id
+        required: true
+        type: integer
+      - description: Данные для обновления
+        in: body
+        name: info
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateReceptionHospitalRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entities.ReceptionHospital'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Обновить приём в больнице
+      tags:
+      - Reception
+  /hospital/patients/{pat_id}:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает информацию о приёме
+      parameters:
+      - description: ID приёма
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Информация о приёме
+          schema:
+            $ref: '#/definitions/entities.ReceptionHospital'
+        "400":
+          description: Некорректный ID
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+        "404":
+          description: Приём не найден
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+        "500":
+          description: Внутренняя ошибка
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+      summary: Получить список приёмов пациента по его ID
+      tags:
+      - Reception
   /medcard/{pat_id}:
     get:
       consumes:
@@ -698,7 +819,43 @@ paths:
       summary: Обновить данные медицинской карты
       tags:
       - Medcard
-  /patient:
+  /patients:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает список пациентов с возможностью пагинации и фильтрации
+      parameters:
+      - description: Номер страницы (по умолчанию 1)
+        in: query
+        name: page
+        type: integer
+      - description: Количество записей на странице (по умолчанию 0 — без ограничения)
+        in: query
+        name: count
+        type: integer
+      - description: 'Фильтр в формате field.operation.value. Примеры: full_name.like.Анна,
+          birth_date.eq.1988-07-14'
+        in: query
+        name: filter
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Список пациентов
+          schema:
+            $ref: '#/definitions/handlers.ResultResponse'
+        "400":
+          description: Некорректные параметры запроса
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+      summary: Получить список пациентов
+      tags:
+      - Patient
     post:
       consumes:
       - application/json
@@ -732,44 +889,7 @@ paths:
       summary: Создать нового пациента
       tags:
       - Patient
-    put:
-      consumes:
-      - application/json
-      description: Обновляет информацию о пациенте
-      parameters:
-      - description: Данные для обновления
-        in: body
-        name: info
-        required: true
-        schema:
-          $ref: '#/definitions/models.UpdatePatientRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Обновленный пациент
-          schema:
-            $ref: '#/definitions/entities.Patient'
-        "400":
-          description: Некорректный запрос
-          schema:
-            $ref: '#/definitions/handlers.ResultError'
-        "404":
-          description: Пациент не найден
-          schema:
-            $ref: '#/definitions/handlers.ResultError'
-        "422":
-          description: Ошибка валидации
-          schema:
-            $ref: '#/definitions/handlers.ResultError'
-        "500":
-          description: Внутренняя ошибка
-          schema:
-            $ref: '#/definitions/handlers.ResultError'
-      summary: Обновить данные пациента
-      tags:
-      - Patient
-  /patient/{id}:
+  /patients/{pat_id}:
     delete:
       consumes:
       - application/json
@@ -834,122 +954,44 @@ paths:
       summary: Получить пациента по ID
       tags:
       - Patient
-  /patients:
-    get:
+    put:
       consumes:
       - application/json
-      description: Возвращает список пациентов с возможностью пагинации и фильтрации
+      description: Обновляет информацию о пациенте
       parameters:
-      - description: Номер страницы (по умолчанию 1)
-        in: query
-        name: page
-        type: integer
-      - description: Количество записей на странице (по умолчанию 0 — без ограничения)
-        in: query
-        name: count
-        type: integer
-      - description: 'Фильтр в формате field.operation.value. Примеры: full_name.like.Анна,
-          birth_date.eq.1988-07-14'
-        in: query
-        name: filter
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Список пациентов
-          schema:
-            $ref: '#/definitions/handlers.ResultResponse'
-        "400":
-          description: Некорректные параметры запроса
-          schema:
-            $ref: '#/definitions/handlers.ResultError'
-        "500":
-          description: Внутренняя ошибка сервера
-          schema:
-            $ref: '#/definitions/handlers.ResultError'
-      summary: Получить список пациентов
-      tags:
-      - Patient
-  /reception/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Возвращает информацию о приёме
-      parameters:
-      - description: ID приёма
-        in: path
-        name: id
+      - description: Данные для обновления
+        in: body
+        name: info
         required: true
-        type: integer
+        schema:
+          $ref: '#/definitions/models.UpdatePatientRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: Информация о приёме
+          description: Обновленный пациент
           schema:
-            $ref: '#/definitions/entities.ReceptionHospital'
+            $ref: '#/definitions/entities.Patient'
         "400":
-          description: Некорректный ID
+          description: Некорректный запрос
           schema:
             $ref: '#/definitions/handlers.ResultError'
         "404":
-          description: Приём не найден
+          description: Пациент не найден
+          schema:
+            $ref: '#/definitions/handlers.ResultError'
+        "422":
+          description: Ошибка валидации
           schema:
             $ref: '#/definitions/handlers.ResultError'
         "500":
           description: Внутренняя ошибка
           schema:
             $ref: '#/definitions/handlers.ResultError'
-      summary: Получить приём по ID
+      summary: Обновить данные пациента
       tags:
-      - Reception
-  /receptions/doctor/{doctor_id}:
-    get:
-      consumes:
-      - application/json
-      description: Возвращает пагинированный список приёмов для конкретных доктора
-        и даты
-      parameters:
-      - description: Doctor ID
-        in: path
-        name: doctor_id
-        required: true
-        type: integer
-      - description: Date in YYYY-MM-DD format
-        in: query
-        name: date
-        type: string
-      - default: 1
-        description: Page number
-        in: query
-        name: page
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/entities.ReceptionHospital'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Получить приём по доктору и дате
-      tags:
-      - Reception
-  /smp/{doctor_id}/receptions:
+      - Patient
+  /smp/{doc_id}/receptions:
     get:
       consumes:
       - application/json
